vsphere/7.0.0.1/_sources/com.vmware.vcenter.vm.rst.txt
com.vmware.vcenter.vm package
=============================

.. automodule:: com.vmware.vcenter.vm
   :members:
   :undoc-members:
   :show-inheritance:

Subpackages
-----------

.. toctree::

   com.vmware.vcenter.vm.guest
   com.vmware.vcenter.vm.hardware
   com.vmware.vcenter.vm.storage

Submodules
----------

com.vmware.vcenter.vm.compute\_client module
--------------------------------------------

.. automodule:: com.vmware.vcenter.vm.compute_client
   :members:
   :undoc-members:
   :show-inheritance:

com.vmware.vcenter.vm.console\_client module
--------------------------------------------

.. automodule:: com.vmware.vcenter.vm.console_client
   :members:
   :undoc-members:
   :show-inheritance:

com.vmware.vcenter.vm.guest\_client module
------------------------------------------

.. automodule:: com.vmware.vcenter.vm.guest_client
   :members:
   :undoc-members:
   :show-inheritance:

com.vmware.vcenter.vm.hardware\_client module
---------------------------------------------

.. automodule:: com.vmware.vcenter.vm.hardware_client
   :members:
   :undoc-members:
   :show-inheritance:

com.vmware.vcenter.vm.storage\_client module
--------------------------------------------

.. automodule:: com.vmware.vcenter.vm.storage_client
   :members:
   :undoc-members:
   :show-inheritance:

com.vmware.vcenter.vm.tools\_client module
------------------------------------------

.. automodule:: com.vmware.vcenter.vm.tools_client
   :members:
   :undoc-members:
   :show-inheritance:

